--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=nhs2409_TEST-PRJ301
 sonar.organization=nhs249
+sonar.java.binaries=build
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=TEST-PRJ301
